[project]
authors         = [{name = "Florin Gogianu", email = "florin.gogianu@gmail.com"}]
dependencies    = [ "numpy>=2.1.1,<3", "matplotlib>=3.9.2,<4"]
description     = "Add a short description here"
name            = "utc_mdp"
requires-python = ">= 3.11"
version         = "0.1.1"

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"