[project]
authors         = [{name = "Florin Gogianu", email = "florin.gogianu@gmail.com"}]
dependencies    = ["numpy", "matplotlib"]
description     = "Add a short description here"
name            = "utc_mdp"
requires-python = ">= 3.10.0"
version         = "0.1.0"

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"
